...
            android:contentDescription="@string/icon" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ic_instructions"
        app:layout_constraintLeft_toRightOf="@+id/ic_instructions"
        app:layout_constraintTop_toTopOf="@+id/ic_instructions" />

...
        app:srl_direction="both"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ic_instructions"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="vertical" />
    </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>

...
