...
terms of use and privacy policy?
         &lt;/body&gt;
        &lt;/html&gt;
        </string>
    <string name="instructions">Instructions</string>
    <string name="session_expired">Session Expired!</string>
    <string name="session_expired_detail">Your session has expired. Please login again to continue using DCP.</string>
    <string name="type_imei">Type IMEI</string>
    <string name="scan_imei">Scan IMEI</string>
    <string name="password_should_be_min_six">Must be at least minimum 6 characters</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="verifying">Verifying</string>
...
